syntax = "proto3";

package compute;
option java_multiple_files = true;
import "data_types.proto";

service ComputeService {
  // data_types
  rpc dataStream(stream data_types.Command) returns (stream data_types.ServerMessage);
}

service VideoRecordService {
  rpc ReceiveFrames(data_types.ClientMessage) returns (stream data_types.ServerMessage);
}